--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   }
 }
